--- a/package.json
+++ b/package.json
@@ -21,18 +21,27 @@
     "build:components": "turbo run build --filter=vue-aurora-x",
     "build:docs": "turbo run build --filter=docs",
     "docs:deploy": "gh-pages -d apps/docs/.vitepress/dist",
-    "docs:build-deploy": "pnpm run build:docs && pnpm run docs:deploy"
+    "docs:build-deploy": "pnpm run build:docs && pnpm run docs:deploy",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.9.0",
     "@changesets/cli": "^2.28.1",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.30.1",
     "@types/node": "^20.17.49",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
     "commitizen": "^4.3.1",
     "cz-git": "^1.11.1",
     "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-oxlint": "^0.16.2",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "eslint-plugin-vue": "^10.3.0",
     "gh-pages": "^6.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.0.0",
